@@ -20,7 +20,7 @@ public class MethodWithoutArgumentsRestriction extends MultiTokenRestriction {
     private static final Parser parser = Parser.getInstance();
 
     private MethodWithoutArgumentsRestriction() {
-        this.restrictedTokens = Tokens.TOKENS.stream().filter(token -> !token.equals(")")).collect(Collectors.toList());
+        this.restrictedTokens = Tokens.TOKENS.stream().filter(token -> !token.equals(")")).toList();
         this.nonRestrictedTokens = List.of(")");
     }
 
